2004-12-14  Alexander Neundorf <neundorf@kde.org>

	* src/syscall-i386-linux-1.0.S:	Add ipc system call

2004-08-04  Alexander Neundorf <alexander.neundorf@jenoptik.com>

	* src/syscall-i386-linux-1.0.S:	Add mkdir system call

2004-06-21  Alexander Neundorf <alexander.neundorf@jenoptik.com>

	* src/syscall-i386-linux-1.0.S:
	Add readdir, lstat and fstat system calls

2004-04-22  Jani Monoses <jani@iv.ro>

	 * cdl/hal_synth_i386.cdl :
	 Invoke tail with stricter syntax that works in latest coreutils. 

2002-09-15  Bart Veer  <bartv@ecoscentric.com>

	* src/syscall-i386-linux-1.0.S:
	Add access system call

2002-08-04  Bart Veer  <bartv@tymora.demon.co.uk>

	* src/vectors.S (_start):
	Store argv and environ in cyg_hal_sys_... variables

2002-04-29  Jonathan Larmour  <jlarmour@redhat.com>

	* src/vectors.S:
	Don't use .file as it can confuse debugging since the .file
	doesn't contain the path and therefore the debugger will never
	know where it lives! This conflicts with using -Wa,--gstabs.

2002-04-10  Jonathan Larmour  <jlarmour@redhat.com>

	* include/pkgconf/mlt_synth_i386_rom.ldi: Define eh_frame and
	RELOCS sections.

2001-11-1   Andrew Lunn <andrew.lunn@ascom.ch>

	* src/syscall-i386-linux-1.0.S: Added mmap system call

2001-12-07  Bart Veer  <bartv@redhat.com>

	* src/syscall-i386-linux-1.0.S: added getcwd() system call

2001-08-02  Bart Veer  <bartv@redhat.com>

	* src/context.S, include/arch.inc, include/var_arch.h:
	Update thread context manipulation code to do the
	right thing with respect to interrupt state.

	* src/context.S (hal_setjmp):
	 Fixed bug in hal_setjmp() that corrupted EBX.

2001-04-27  Bart Veer  <bartv@redhat.com>

	* All files
	Major reorganization and clean-up of the synthetic target.

2000-11-02  Jonathan Larmour  <jlarmour@redhat.com>

	* src/entry.c (_linux_entry): Extend memory using brk() syscall to
	match memory layout

	* src/syscall-i386-linux-1.0.S: Add brk syscall

2000-10-20  Jonathan Larmour  <jlarmour@redhat.com>
